add dot at script src
add dot at script src

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
     <!-- Akhir Navigasi -->
     <div class="container" id="body-content"></div>
-    <script src="/js/materialize.min.js"></script>
-    <script src="/js/nav.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/materialize.min.js"></script>
+    <script src="./js/nav.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
